--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,9 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+ <<: *default
+  adapter: postgresql
+  encoding: unicode
+  database: mooostachio
+  username: josephcardillo
+  password: ENV['MOOOSTACHIO_DB_PW']
